# automatic-planer

./: CMakeLists.txt
main/: CMakeLists.txt  main.c
main/display/: control_panel.c  control_panel.h  joystick.c  joystick.h  lcd1602.c  lcd1602.h  menu.c  menu.h
main/motion_system/: axis.c  axis.h  micro_switch.c  micro_switch.h  motor.c  motor.h
